add containers for each section and create CSS file

--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Landing Page</title>
 </head>
 <body>
-  
+  <div class="top">
+    <div class="header">
+      header here
+    </div>
+    <div class="hero">
+      hero here
+    </div>
+  </div>
+
+  <div class="content">
+    <div class="info">
+      info here
+    </div>
+    <div class="quote">
+      quote here
+    </div>
+    <div class="cta">
+      call to action here
+    </div>
+  </div>
+
+  <div class="footer">
+    footer here
+  </div>
+
 </body>
 </html>
