--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
 <body>
   <div class="top">
     <div class="header">
-      header here
+        <img class="logo" src="images/tree-logo.png" alt="Tree logo">
+        <ul class="header-links">
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
     </div>
     <div class="hero">
-      hero here
+      <div class="hero-text">
+        <h1 class="hero-main">This website is awesome.</h1>
+        <h3 class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</h3>
+        <a class="sign-up" href="#">Sign Up</a>
+      </div>
+      <h1 class="hero-img">Placeholder image</h1>
     </div>
   </div>
 
