--- a/index.html
+++ b/index.html
@@ -8,39 +8,61 @@
   <title>Landing Page</title>
 </head>
 <body>
-  <div class="top">
-    <div class="header">
-        <img class="logo" src="images/tree-logo.png" alt="Tree logo">
-        <ul class="header-links">
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+  <div class="header">
+      <img class="logo" src="images/tree-logo.png" alt="Tree logo">
+      <ul class="header-links">
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+  </div>
+
+  <div class="hero">
+    <div class="hero-text">
+      <h1 class="hero-main">This website is awesome.</h1>
+      <h3 class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</h3>
+      <a class="sign-up" href="#">Sign Up</a>
     </div>
-    <div class="hero">
-      <div class="hero-text">
-        <h1 class="hero-main">This website is awesome.</h1>
-        <h3 class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</h3>
-        <a class="sign-up" href="#">Sign Up</a>
+    <h1 class="hero-img">Placeholder image</h1>
+  </div>
+
+  <div class="info">
+    <h3 class="info-header">Some random information.</h3>
+    <div class="info-content">
+      <div class="img-caption">
+        <img class="info-img" src="images/tree-logo.png" alt="Tree logo">
+        <p>this is some subtext under an illustration or image</p>
       </div>
-      <h1 class="hero-img">Placeholder image</h1>
+      <div class="img-caption">
+        <img class="info-img" src="images/tree-logo.png" alt="Tree logo">
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="img-caption">
+        <img class="info-img" src="images/tree-logo.png" alt="Tree logo">
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="img-caption">
+        <img class="info-img" src="images/tree-logo.png" alt="Tree logo">
+        <p>this is some subtext under an illustration or image</p>
+      </div>
     </div>
   </div>
 
-  <div class="content">
-    <div class="info">
-      info here
+  <div class="quote">
+    <h4 class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</h4>
+    <h5 class="quote-source">-Thor, God of Thunder</h5>
+  </div>
+
+  <div class="cta">
+    <div class="cta-text">
+      <h4>Call to action! It's time!</h4>
+      <h5>Sign up for our product by clicking that button right over there</h5>
     </div>
-    <div class="quote">
-      quote here
-    </div>
-    <div class="cta">
-      call to action here
-    </div>
+    <a class="cta-sign-up" href="#">Sign Up</a>
   </div>
 
   <div class="footer">
-    footer here
+    <p>Copyright @ The Odin Project 2021</p>
   </div>
 
 </body>
