replace placeholder images and update README file

--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
       <h3 class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</h3>
       <a class="sign-up" href="#">Sign Up</a>
     </div>
-    <h1 class="hero-img">Placeholder image</h1>
+    <img class="hero-img" src="images/tree-img.jpg" alt="Tree"></a>
   </div>
 
   <div class="info">
     <h3 class="info-header">Some random information.</h3>
     <div class="info-content">
       <div class="img-caption">
-        <img class="info-img" src="images/tree-logo.png" alt="Tree logo">
+        <img class="info-img" src="images/bird-img.jpg" alt="Bird">
         <p>this is some subtext under an illustration or image</p>
       </div>
       <div class="img-caption">
-        <img class="info-img" src="images/tree-logo.png" alt="Tree logo">
+        <img class="info-img" src="images/flower-img.jpg" alt="Waterlily">
         <p>this is some subtext under an illustration or image</p>
       </div>
       <div class="img-caption">
-        <img class="info-img" src="images/tree-logo.png" alt="Tree logo">
+        <img class="info-img" src="images/coffee-img.jpg" alt="Coffee">
         <p>this is some subtext under an illustration or image</p>
       </div>
       <div class="img-caption">
-        <img class="info-img" src="images/tree-logo.png" alt="Tree logo">
+        <img class="info-img" src="images/cloud-img.jpg" alt="Clouds">
         <p>this is some subtext under an illustration or image</p>
       </div>
     </div>
